<resources>
    <string name="app_name">Weather</string>
    <string name="welcome_text">Welcome my friend</string>
    <string name="example_text">Example</string>
    <string name="data_class_example">Data class</string>
    <string name="name_cat">names of cats</string>
    <string name="list_of_cats">Murzik Murka</string>
    <string name="object_class_example"><![CDATA[Data COPY & replace]]></string>
</resources>